# DunCrew

./: .gitignore  AGENTS.md  ARCHITECTURE_V2_FIELDS.md  CLAUDE.md  DunCrew.bat  README.md  SKILL_PACKAGING_GUIDE.md  SOUL.md  THEME_ANALYSIS_REPORT.md  ddos-local-server.py  docker-compose.yml  docker-entrypoint.sh  duncrew-server.py  electron-builder.yml  fix_imports.py  hybrid_search.py  index.html  package-lock.json  package.json  requirements.txt  start-docker.bat  start-docker.sh  start-standalone.bat  start.bat  start.sh  stop-duncrew.bat  tailwind.config.js  tsconfig.json  vite.config.ts
electron/: auto-updater.ts  main.ts  postcompile.cjs  preload.ts  python-manager.ts  tsconfig.json
examples/: code-project.md  novel-writing.md  research-report.md
memory/: 2026-02-19.md  2026-02-20.md  2026-02-22.md  2026-02-23.md
openclaw-extension/: index.ts  openclaw.plugin.json  package.json
registry/: mcp-servers.json  skills.json
scripts/: _qm.py  _write_plan.py  build-standalone.bat  build-tauri.bat  generate_landing_docx.py  generate_landing_pdf.py  migrate-skills.py
server/: browser.py  cleanup.py  constants.py  db.py  embedding.py  handler.py  main.py  registry.py  startup.py  state.py  subagent.py  utils.py
skills/: __init__.py  list.txt  mcp_client.py  mcp_manager.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/openclaw-extension/: openclaw.plugin.json  package.json
src-tauri/resources/openclaw-extension/src/: dun-manager.ts  gene-pool.ts  nexus-manager.ts
src-tauri/src/: main.rs
(+339 files in other folders)
