[package]
name = "duncrew"
version = "1.0.0"
description = "DunCrew - AI Operating System"
authors = ["DunCrew Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 16
lto = false
opt-level = 2
strip = false
